k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nirlipta-yoga
  labels:
    name: nirlipta-yoga
    app: yoga-studio
